--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,8 @@ dependencies {
     compile 'com.shehabic.droppy:Droppy:0.6.0@aar'
 
     compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+    implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
 }
