--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,25 @@
         android:roundIcon="@mipmap/ic_launcher_organizer_main"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ChooseCompanyActivity"/>
+        <activity android:name=".Activities.ChooseCompanyActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
+        <activity android:name=".Activities.BindingActivity" />
+        <activity android:name=".Activities.EditCompanyActivity" />
+        <activity android:name=".Activities.CreateEventActivity"></activity>
     </application>
 
 </manifest>
