Create Event Activity and NavDrawer Fragments Added(Working version)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
 
         <activity android:name=".Activities.BindingActivity" />
         <activity android:name=".Activities.EditCompanyActivity" />
-        <activity android:name=".Activities.CreateEventActivity"></activity>
+        <activity android:name=".Activities.CreateEventActivity" />
+        <activity android:name=".Activities.OrderTicketInfoActivity" />
+        <activity android:name=".Activities.CreateTicketsActivity" />
+        <activity android:name=".Activities.FreeTicketActivity"></activity>
     </application>
 
 </manifest>
