--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -33,14 +40,15 @@ dependencies {
 //    implementation 'com.github.bumptech.glide:glide:4.8.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
-    compile 'id.zelory:compressor:2.1.0'
+    implementation 'id.zelory:compressor:2.1.0'
 
-    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    compile 'com.shehabic.droppy:Droppy:0.6.0@aar'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.shehabic.droppy:Droppy:0.6.0@aar'
 
-    compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
 
     implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
+    implementation 'io.reactivex:rxjava:1.1.6'
 }
