--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,9 @@ dependencies {
 
     implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
     implementation 'io.reactivex:rxjava:1.1.6'
+//    implementation 'com.github.mthli:Knife:v1.1'
+    implementation 'jp.wasabeef:richeditor-android:1.2.2'
+//    compile 'com.fiberlink.maas360.android:richtexteditor:0.1.1'
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+//    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
 }
