--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="kz.djunglestones.organizerappqel">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_organizer_main"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:allowBackup">
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +42,14 @@
         <activity android:name=".Activities.CreateTicketsActivity" />
         <activity android:name=".Activities.FreeTicketActivity" />
         <activity android:name=".Activities.ChoosePrivacyActivity" />
-        <activity android:name=".PaidTicketActivity"></activity>
+        <activity android:name=".Activities.PaidTicketActivity" />
+        <activity
+            android:name=".Activities.EventDescriptionActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".Activities.QRCodeScannerActivity" />
+        <activity android:name=".Activities.PromoCodeActivity" />
+        <activity android:name=".Activities.AddPromoCodeActivity" />
+        <activity android:name=".Activities.ChoosePromocodeTicketActivity"></activity>
     </application>
 
 </manifest>
